--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "TOKEN": "OTg2NjA0OTkyMjI2MDIxNDU2.GwjDjP.pGI8jb3zyPiRmLAcdv3dud_HROz__7o1pzh25c",
+    "TOKEN": "",
     "PREFIX": "$",
     "COOLDOWN": "1",
     "UNBANCOOLDOWN": "15",
